--- a/angular/package.json
+++ b/angular/package.json
@@ -12,38 +12,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0-rc.1",
-    "@angular/common": "^6.0.0-rc.1",
-    "@angular/compiler": "^6.0.0-rc.1",
-    "@angular/core": "^6.0.0-rc.1",
-    "@angular/forms": "^6.0.0-rc.1",
-    "@angular/http": "^6.0.0-rc.1",
-    "@angular/platform-browser": "^6.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
-    "@angular/router": "^6.0.0-rc.1",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0-rc.0",
-    "zone.js": "^0.8.24"
+    "@angular/animations": "^5.2.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.5",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
+    "@stomp/ng2-stompjs": "^0.6.4",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0-rc.1",
-    "@angular-devkit/build-angular": "~0.5.0",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.0-rc.5",
-    "@angular/language-service": "^6.0.0-rc.1",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
+    "@angular/cli": "~1.7.4",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "protractor": "~5.1.2",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3"
   }
 }
