began the routing

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     repositories {
         mavenLocal()
-        maven { url 'http://repo.spring.io/plugins-release' }
-        maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url = 'http://repo.spring.io/plugins-release' }
+        maven { url = 'https://plugins.gradle.org/m2/' }
     }
 
     dependencies {
