--- a/angular/package.json
+++ b/angular/package.json
@@ -30,6 +30,7 @@
     "@stomp/ng2-stompjs": "^0.6.4",
     "core-js": "^2.4.1",
     "ngrx-store-freeze": "^0.2.2",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
