dockerize the application

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ version=1.0.0-SNAPSHOT
 nodePluginVersion=1.2.0
 springDependencyManagementPluginVersion=1.0.5.RELEASE
 springBootVersion=2.0.1.RELEASE
+gradleDockerVersion=1.2
 
 # Dependencies Version
 springPlatformVersion=Cairo-RELEASE
