--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenLocal()
+        jcenter()
         maven { url = 'http://repo.spring.io/plugins-release' }
         maven { url = 'https://plugins.gradle.org/m2/' }
     }
@@ -9,6 +10,7 @@ buildscript {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
         classpath "io.spring.gradle:dependency-management-plugin:${springDependencyManagementPluginVersion}"
         classpath "com.moowork.gradle:gradle-node-plugin:${nodePluginVersion}"
+        classpath "se.transmode.gradle:gradle-docker:${gradleDockerVersion}"
     }
 }
 
